--- a/package.json
+++ b/package.json
@@ -1,22 +1,41 @@
 {
-  "name": "presentation-slideshow",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.20",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.3"
-  }
+    "name": "presentation-slideshow",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest",
+        "test:watch": "jest --watch"
+    },
+    "dependencies": {
+        "@prismicio/client": "^5.1.0",
+        "next": "11.1.2",
+        "prismic-reactjs": "^1.3.4",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "sass": "^1.39.2"
+    },
+    "devDependencies": {
+        "@testing-library/dom": "^8.5.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.1.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.9.1",
+        "@types/react": "^17.0.20",
+        "babel-jest": "^27.1.1",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "eslint": "^7.32.0",
+        "eslint-config-next": "11.1.2",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-babel-module": "^5.3.1",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-prettier": "^4.0.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^27.1.1",
+        "typescript": "^4.4.3"
+    }
 }
