--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,7 @@
         "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
-            "@components/*": ["./components/*"],
-            "@shared/*": ["./shared/*"],
-            "@helpers/*": ["./shared/helpers/*"],
+            "@app/*": ["./*"],
             "__tests__/*": ["./__tests__/*"]
         }
     },
