--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@testing-library/react": "^12.1.0",
         "@testing-library/user-event": "^13.2.1",
         "@types/jest": "^27.0.1",
+        "@types/jsdom": "^16.2.13",
         "@types/node": "^16.9.1",
         "@types/react": "^17.0.20",
         "babel-jest": "^27.1.1",
