--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "dependencies": {
         "@prismicio/client": "^5.1.0",
         "next": "11.1.2",
+        "prismic-dom": "^2.2.6",
         "prismic-reactjs": "^1.3.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "sass": "^1.39.2"
     },
     "devDependencies": {
+        "@prismicio/types": "^0.1.10",
         "@testing-library/dom": "^8.5.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.1.0",
@@ -26,6 +28,7 @@
         "@types/jest": "^27.0.1",
         "@types/jsdom": "^16.2.13",
         "@types/node": "^16.9.1",
+        "@types/prismic-dom": "^2.1.1",
         "@types/react": "^17.0.20",
         "babel-jest": "^27.1.1",
         "babel-plugin-module-resolver": "^4.1.0",
