--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "next start",
         "lint": "next lint",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "prettier": "prettier --write **/*.{js,jsx,ts,tsx,json}"
     },
     "dependencies": {
         "@prismicio/client": "^5.1.0",
@@ -38,8 +39,10 @@
         "eslint-import-resolver-babel-module": "^5.3.1",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^7.0.2",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.1.1",
+        "prettier": "^2.4.0",
         "typescript": "^4.4.3"
     }
 }
