Adjusted prettier and linter configuration 	Updated files with the new configuration

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
         }
     },
     "rules": {
-        "prettier/prettier": "error",
+        "prettier/prettier": ["error", { "printWidth": 100 }],
         "require-jsdoc": [
             "error",
             {
