--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "arrowParens": "avoid",
     "endOfLine": "auto",
     "semi": true,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "printWidth": 100
 }
