--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "lint": "next lint",
         "test": "jest",
         "test:watch": "jest --watch",
-        "prettier": "prettier --write **/*.{js,jsx,ts,tsx,json}"
+        "prettier": "prettier --write **/*.{js,jsx,ts,tsx,json}",
+        "storybook": "start-storybook -s ./public -p 6006",
+        "build-storybook": "build-storybook"
     },
     "dependencies": {
         "@prismicio/client": "^5.1.0",
@@ -17,22 +19,29 @@
         "prismic-dom": "^2.2.6",
         "prismic-reactjs": "^1.3.4",
         "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "sass": "^1.39.2"
+        "react-dom": "17.0.2"
     },
     "devDependencies": {
-        "@prismicio/types": "^0.1.10",
-        "@testing-library/dom": "^8.5.0",
+        "@babel/core": "^7.15.5",
+        "@prismicio/types": "^0.1.13",
+        "@storybook/addon-actions": "^6.3.9",
+        "@storybook/addon-essentials": "^6.3.9",
+        "@storybook/addon-links": "^6.3.9",
+        "@storybook/preset-scss": "^1.0.3",
+        "@storybook/react": "^6.3.9",
+        "@testing-library/dom": "^8.7.1",
         "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.1.0",
+        "@testing-library/react": "^12.1.1",
         "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
+        "@types/jest": "^27.0.2",
         "@types/jsdom": "^16.2.13",
-        "@types/node": "^16.9.1",
+        "@types/node": "^16.10.2",
         "@types/prismic-dom": "^2.1.1",
-        "@types/react": "^17.0.20",
-        "babel-jest": "^27.1.1",
+        "@types/react": "^17.0.26",
+        "babel-jest": "^27.2.4",
+        "babel-loader": "^8.2.2",
         "babel-plugin-module-resolver": "^4.1.0",
+        "css-loader": "^5.2.6",
         "eslint": "^7.32.0",
         "eslint-config-next": "11.1.2",
         "eslint-config-prettier": "^8.3.0",
@@ -41,8 +50,11 @@
         "eslint-plugin-prettier": "^4.0.0",
         "husky": "^7.0.2",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.1.1",
-        "prettier": "^2.4.0",
+        "jest": "^27.2.4",
+        "prettier": "^2.4.1",
+        "sass": "^1.42.1",
+        "sass-loader": "^10.1.1",
+        "style-loader": "^2.0.0",
         "typescript": "^4.4.3"
     }
 }
