--- a/package.json
+++ b/package.json
@@ -10,52 +10,57 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "prettier": "prettier --write **/*.{js,jsx,ts,tsx,json}",
-        "storybook": "start-storybook -s ./public -p 6006",
+        "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook"
     },
     "dependencies": {
-        "@prismicio/client": "^5.1.0",
-        "next": "12.0.4",
+        "@prismicio/client": "^6.3.0",
+        "next": "12.1.0",
         "prismic-dom": "^2.2.6",
         "prismic-reactjs": "^1.3.4",
         "react": "17.0.2",
         "react-dom": "17.0.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.16.0",
-        "@prismicio/types": "^0.1.18",
-        "@storybook/addon-actions": "^6.3.12",
-        "@storybook/addon-essentials": "^6.3.12",
-        "@storybook/addon-links": "^6.3.12",
+        "@babel/core": "^7.17.5",
+        "@prismicio/types": "^0.1.25",
+        "@storybook/addon-actions": "^6.4.19",
+        "@storybook/addon-essentials": "^6.4.19",
+        "@storybook/addon-interactions": "^6.4.19",
+        "@storybook/addon-links": "^6.4.19",
+        "@storybook/builder-webpack5": "^6.4.19",
+        "@storybook/manager-webpack5": "^6.4.19",
         "@storybook/preset-scss": "^1.0.3",
-        "@storybook/react": "^6.3.12",
-        "@testing-library/dom": "^8.11.1",
-        "@testing-library/jest-dom": "^5.15.0",
-        "@testing-library/react": "^12.1.2",
+        "@storybook/react": "^6.4.19",
+        "@storybook/testing-library": "0.0.9",
+        "@testing-library/dom": "^8.11.3",
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.0.3",
-        "@types/jsdom": "^16.2.13",
-        "@types/node": "^16.11.9",
+        "@types/jest": "^27.4.0",
+        "@types/jsdom": "^16.2.14",
+        "@types/node": "^17.0.18",
         "@types/prismic-dom": "^2.1.1",
-        "@types/react": "^17.0.36",
-        "babel-jest": "^27.3.1",
+        "@types/react": "^17.0.39",
+        "babel-jest": "^27.5.1",
         "babel-loader": "^8.2.3",
         "babel-plugin-module-resolver": "^4.1.0",
         "css-loader": "^5.2.6",
-        "eslint": "^7.32.0",
-        "eslint-config-next": "12.0.4",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint": "^8.9.0",
+        "eslint-config-next": "12.1.0",
+        "eslint-config-prettier": "^8.4.0",
         "eslint-import-resolver-babel-module": "^5.3.1",
-        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-prettier": "^4.0.0",
         "husky": "^7.0.4",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.3.1",
-        "lint-staged": "^11.2.6",
-        "prettier": "^2.4.1",
-        "sass": "^1.43.4",
+        "jest": "^27.5.1",
+        "lint-staged": "^12.3.4",
+        "prettier": "^2.5.1",
+        "sass": "^1.49.8",
         "sass-loader": "^10.1.1",
         "style-loader": "^2.0.0",
-        "typescript": "^4.3.2"
+        "typescript": "^4.5.5",
+        "webpack": "^5.69.1"
     }
 }
