--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,3 @@
-PRISMIC_URL="https://PRISMIC_PROJECT_ID.cdn.prismic.io/api/v2"
+PRISMIC_REPO_NAME="The Prismic repository name"
 PRISMIC_TOKEN="The Prismic access token [Settings - Api & Security - Generate an Access Token section]"
 PRISMIC_DOCUMENT_TYPE="The Prismic document type/custom type ID"
