--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     },
     "dependencies": {
         "@prismicio/client": "^6.3.0",
+        "dat.gui": "^0.7.9",
+        "mapbox-gl": "^2.7.0",
         "next": "12.1.0",
         "prismic-dom": "^2.2.6",
         "prismic-reactjs": "^1.3.4",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "three": "^0.137.5"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
@@ -38,11 +41,14 @@
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
+        "@types/dat.gui": "^0.7.7",
         "@types/jest": "^27.4.0",
         "@types/jsdom": "^16.2.14",
+        "@types/mapbox-gl": "^2.6.1",
         "@types/node": "^17.0.18",
         "@types/prismic-dom": "^2.1.1",
         "@types/react": "^17.0.39",
+        "@types/three": "^0.137.0",
         "babel-jest": "^27.5.1",
         "babel-loader": "^8.2.3",
         "babel-plugin-module-resolver": "^4.1.0",
