--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "prismic-reactjs": "^1.3.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "three": "^0.137.5"
+        "sharp": "^0.30.1",
+        "three": "^0.137.5",
+        "uglifyjs-webpack-plugin": "^2.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
